<!--
  ~    Copyright [2017] [NIRVANA PRIVATE LIMITED]
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <!--@application-->
    <!--复数表达式-->
    <plurals name="likes_count">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <string name="app_name">Unity</string>
    <string name="error_msg_network_abnormal">网络异常</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="share">分享</string>
    <string name="title_activity_main">MainActivity</string>

    <!--@侧边栏-->
    <string name="desperadozck">desperadozck</string>
    <string name="github_website_address">https://github.com/NlRVANA</string>
    <string name="title_welfare">福利</string>
    <string name="title_rest_video">休息视频</string>
    <string name="title_test">测试</string>
    <string name="title_news">干货</string>
    <string name="title_setting">设置</string>
    <string name="title_out">退出</string>
    <string name="title_personal_center">个人中心</string>
    <string name="title_my_conllection">我的收藏</string>

    <!--@LoginActivity-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>

    <!--@ImageActivity-->
    <string name="loading">正在加载</string>
    <string name="save">保存</string>
    <string name="error_msg_load_fail">加载失败</string>
    <string name="success_msg_save">保存成功</string>
    <string name="error_msg_save_fail">保存失败</string>
    <string name="success_msg_collect">收藏成功</string>
    <string name="error_msg_collect_fail">收藏失败</string>
    <string name="error_msg_cancel_collect_fail">取消收藏失败</string>
    <string name="placeholder_divider">%1$s/%2$s</string>


    <!--@AccountActivity-->
    <string name="collect">收藏</string>
    <string name="local">本地</string>
    <string name="like">喜欢</string>

    <!--@ArticleActivity-->
    <string name="android">Android</string>
    <string name="ios">Ios</string>
    <string name="qianduan">前端</string>

    <string name="introduce"><![CDATA[每天一张精选妹纸图、一个精选小视频（视频源地址播放），一篇程序猿精选干货。(主页中点击妹纸打开妹纸大图，点击文字打开干货页面)\n\n数据内容来源于代码家的 http://gank.io。\n\n\n\n\n\n\n\n\n\n\n\n\n\n]]></string>
    <string name="watch_image">查看美图</string>
    <string name="refresh">刷新</string>
    <string name="copy_link">复制链接</string>
    <string name="open_by_browser">浏览器打开</string>
    <string name="sucess_msg_copy">链接复制成功</string>
    <string name="test">测试</string>
    <string name="exit">退出</string>

    <string name="str_finish_if_press_again">再按一次退出</string>
    <string name="str_developping">开发中...＜(▰˘◡˘▰)</string>

    <string name="str_load_more">显示更多</string>
    <string name="listview_loading">努力加载中…</string>
    <string name="nomore_loading">没有更多了</string>
    <string name="refreshing">　正在刷新　</string>
    <string name="listview_header_hint_normal">下拉刷新…</string>
    <string name="listview_header_hint_release">释放刷新…</string>
    <string name="refresh_done">刷新完成…</string>
    <string name="listview_header_last_time">上次更新时间：</string>
    <string name="str_no_network">网络开小差了,点击重试</string>
    <!--@自定义View-->
    <string name="separator">\t|\t</string>
    <string name="km">%1$s千米</string>
    <string name="kcal">%1$s千卡</string>

</resources>
