<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_collect_bg_image"
        android:orderInCategory="1"
        android:title="@string/watch_image"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_link"
        android:orderInCategory="3"
        android:title="@string/copy_link"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_open_browser"
        android:orderInCategory="4"
        android:title="@string/open_by_browser"
        app:showAsAction="never"/>

</menu>
